# oc2kernel

./: .gitignore  Cargo.toml  build.rs  build.sh  debug.sh  oc2kernel  out.txt  run.sh
.cargo/: config.toml
src/: bar32alloc.rs  main.rs  plic.rs  script.ld  stolen_uart.rs  uart.rs  virtio_hal.rs
