[package]
name = "oc2kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fdt = { version = "0.1.5", features = ["pretty-printing"] }
once_cell = { version = "1.17.1", default-features = false, features = ["alloc","race"] }
simple-chunk-allocator = "0.1.5"
uart_16550 = "0.2.18"
virtio-drivers = "0.4.0"
